--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/imagelite
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: 123456
+    driver-class-name: org.postgresql.Driver
   jpa:
-    database: POSTGRESQL
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
 
